--- a/scratch/test.css
+++ b/scratch/test.css
@@ -1,3 +1,48 @@
+
+
+  /* RIBBON */
+.parent {
+  overflow: hidden; /* required */
+  width: 50%; /* for demo only */
+  height: 250px /* some non-zero number */;
+  margin: 25px auto; /* for demo only */
+  border:1px solid grey; /* for demo only */
+  position: relative; /* required  for demo */
+}
+
+.ribbon {
+  margin: 0;
+  padding: 0;
+  background: #333;
+  color:white;
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 0.85em;
+  font-style: italic;
+  padding:0.33em 0;
+  position: absolute;
+  top:0;
+  right:0;
+  transform: translateX(30%) translateY(0%) rotate(45deg);
+  transform-origin: top left;
+}
+.ribbon:before,
+.ribbon:after {
+  content: '';
+  position: absolute;
+  top:0;
+  margin: 0 -1px; /* tweak */
+  width: 100%;
+  height: 100%;
+  background: #333;
+}
+.ribbon:before {
+  right:100%;
+}
+
+.ribbon:after {
+  left:100%;
+}
+
 /* Flippy Card */
 
 /* The flip card container - set the width and height to whatever you want. We have added the border property to demonstrate that the flip itself goes out of the box on hover (remove perspective if you don't want the 3D effect */
@@ -10,7 +55,7 @@
   }
   
   /* This container is needed to position the front and back side */
-  .flip-card-inner {
+  .flip-card--inner {
     position: relative;
     width: 100%;
     height: 100%;
@@ -20,12 +65,12 @@
   }
   
   /* Do an horizontal flip when you move the mouse over the flip box container */
-  .flip-card:hover .flip-card-inner {
+  .flip-card:hover .flip-card--inner {
     transform: rotateY(180deg);
   }
   
   /* Position the front and back side */
-  .flip-card-front, .flip-card-back {
+  .flip-card__front, .flip-card__back {
     position: absolute;
     width: 100%;
     height: 100%;
@@ -33,13 +78,13 @@
   }
   
   /* Style the front side (fallback if image is missing) */
-  .flip-card-front {
+  .flip-card__front {
     background-color: #bbb;
     color: black;
   }
   
   /* Style the back side */
-  .flip-card-back {
+  .flip-card__back {
     background-color: dodgerblue;
     color: white;
     transform: rotateY(180deg);
